--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -1,9 +1,6 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -86,6 +83,10 @@ body {
 }
 
 body {
+  font-family:  var(--font-zen-kurenaido),
+    "Roboto", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
