--- a/apps/web/src/features/site/provider/ThemeProvider.scss
+++ b/apps/web/src/features/site/provider/ThemeProvider.scss
@@ -2,16 +2,16 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-noto-sans-jp), "Roboto", sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
-  font-family: var(--font-zen-kurenaido), "Roboto", sans-serif;
+  font-family: var(--font-noto-sans-jp), "Roboto", sans-serif;
   color: var(--color-text-default);
   background-color: var(--color-background-default);
   line-height: 1.5;
@@ -25,6 +25,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
